fix authentication di swagger agar bisa melakukan test ubah role
